# k8s-flask

./: Dockerfile  Makefile  README.md  docker-compose.yaml  manifest.yaml  pyproject.toml  server.py
books/: pyproject.toml  server.py
club/: Dockerfile  go.mod  go.sum  main.go
