[tool.poetry]
name = "k8s-flask"
version = "0.1.0"
description = ""
authors = ["Håvard Anda Estensen <haavard.ae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2"
jaeger-client = "^4.1.0"
opentracing = "^2.2.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
